feat[45]: ReadModel implemented to extend responses to fit frontend needs
