# internal/domain/job_request/read_model/summary.go
@@ -1,0 +1,14 @@
+package readmodel
+
+type JobRequestSummary struct {
+	ID             int
+	ConversationID int
+	Title          string
+	Description    string
+	Requester      JobRequestRequester
+}
+
+type JobRequestRequester struct {
+	Name    string
+	Surname string
+}
